Code Viewer & Home Page

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,11 +13,12 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #0c2d4f;
-$secondary: #1e736b;
+$secondary: #265b4d;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
+$white: #f3f4f5;
 
 $positive: #21ba45;
 $negative: #c10015;
